openshift/http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deid-roberta
  labels:
    app: deid-roberta
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: deid-roberta
  type: ClusterIP
